# sop

./: Cargo.toml
src/: commons.rs  constraints.rs  create_table.rs  data_types.rs  drop_table.rs  encryption.rs  lib.rs  parser.rs  table.rs  truncate.rs
src/queries/: commons.rs  constraints.rs  create_table.rs  data_types.rs  drop_table.rs  encryption.rs  mod.rs  table.rs  truncate.rs
