[package]
name = "sop"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sop"
path = "src/lib.rs"


[dependencies]
nom = "7.1.0"
serde = "1.0"
serde_derive = "1.0"
clap = { version = "2.33", optional = true }
log = "0.4.14"
pretty_env_logger = { version = "0.4.0", optional = true }
serde_json = { version = "1.0.72", optional = true }

[dev-dependencies]
pretty_assertions = "0.5.1"

[features]
build-binary = ["pretty_env_logger", "serde_json", "clap"]


[[bin]]
name = "sop"
path = "src/bin/sop.rs"
doc = false
required-features = ["pretty_env_logger", "serde_json", "clap"]


